corrected object fit and alignment

--- a/blocks/khan/__book-container/khan__book-container.css
+++ b/blocks/khan/__book-container/khan__book-container.css
@@ -2,5 +2,5 @@
     display: flex;
     margin: 68px 0 0;
     padding: 0;
-    justify-content: left;
+    align-items: flex-start;
 }
