--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,7 +1,7 @@
     .khan__book-pic {
-        /*width: 620px;
-    height: 608px;  раз эти размеры приводят к искажению картинки - уберем их. */
+        width: 620px;
+        height: 608px;
         margin-right: 48px;
-        object-fit: contain;
-        object-position: left;
+        object-fit: cover;
+        object-position: left top;
     }
