--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -5,7 +5,6 @@
     text-decoration: none;
     color: #2f80ed;
     transition: opacity .3s linear;
-    height: fit-content;
     object-position: left;
 }
 
